--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Devsnest Projects</title>
+    <style>
+      body {
+        background-color: #867ae9;
+      }
+      div {
+        margin-left: 40px;
+        line-height: 2;
+      }
 
+      a {
+        display: block;
+        color: #000;
+        text-decoration: none;
+        font-size: 20px;
+        font-weight: 600;
+      }
+
+      a:hover {
+        color: #fff;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Devsnest Projects</h1>
+    <div>
+      <a href="./day-01/index.html">Day 1 - Article with only HTML</a>
+      <a href="./day-02/index.html">Day 2 - Article with a bit of CSS</a>
+      <a href="./day-03/index.html">Day 3 - CV with flexbox</a>
+      <a href="./day-04/index.html">Day 4 - CSS Clock</a>
+      <a href="./day-05/basic_calculator/index.html">Day 5 - Calculator</a>
+      <a href="./day-06/index.html">Day 6 - Js array questions</a>
+      <a href="./day-07/index.html">Day 7 - Js object questions</a>
+      <a href="./day-08/index.html">Day 8 - Checkbox Invader</a>
+      <a href="./day-09/index.html">Day 9 - Count the booking</a>
+    </div>
+  </body>
+</html>
