--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <h1>Devsnest Projects</h1>
     <div>
-      <a href="./day-01/index.html">Day 1 - Article with only HTML</a>
+      <a href="./day-01/letter.html">Day 1 - Article with only HTML</a>
       <a href="./day-02/index.html">Day 2 - Article with a bit of CSS</a>
       <a href="./day-03/index.html">Day 3 - CV with flexbox</a>
       <a href="./day-04/index.html">Day 4 - CSS Clock</a>
