--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   <body>
     <h1>Devsnest Projects</h1>
     <div>
-      <a href="https://github.com/Komal7209/DevsNest/blob/master/Day1/Letter.html">Day 1 - Article with only HTML</a>
-      <a href="./day-02/index.html">Day 2 - Article with a bit of CSS</a>
-      <a href="./day-03/index.html">Day 3 - CV with flexbox</a>
-      <a href="./day-04/index.html">Day 4 - CSS Clock</a>
-      <a href="./day-05/basic_calculator/index.html">Day 5 - Calculator</a>
-      <a href="./day-06/index.html">Day 6 - Js array questions</a>
-      <a href="./day-07/index.html">Day 7 - Js object questions</a>
-      <a href="./day-08/index.html">Day 8 - Checkbox Invader</a>
-      <a href="./day-09/index.html">Day 9 - Count the booking</a>
+      <a href="./Day1/Letter.html">Day 1 - Article with only HTML</a>
+      <a href="./Day2/Letter.css">Day 2 - Article with a bit of CSS</a>
+      <a href="./Day3/index.html">Day 3 - CV with flexbox</a>
+      <a href="./Day4/index.html">Day 4 - CSS Clock</a>
+      <a href="./Day5/basic_calculator/index.html">Day 5 - Calculator</a>
+      <a href="./Day6/index.html">Day 6 - Js array questions</a>
+      <a href="./Day7/index.html">Day 7 - Js object questions</a>
+      <a href="./Day8/index.html">Day 8 - Checkbox Invader</a>
+      <a href="./Day9/index.html">Day 9 - Count the booking</a>
     </div>
   </body>
 </html>
