--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div>
       <a href="./Day1/Letter.html">Day 1 - Article with only HTML</a>
       <a href="./Day2/CSSAdded.html">Day 2 - Article with a bit of CSS</a>
-      <a href="./Day3/index.html">Day 3 - CV with flexbox</a>
+      <a href="./Day3/Resume.html">Day 3 - CV with flexbox</a>
       <a href="./Day4/index.html">Day 4 - CSS Clock</a>
       <a href="./Day5/basic_calculator/index.html">Day 5 - Calculator</a>
       <a href="./Day6/index.html">Day 6 - Js array questions</a>
