--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <a href="./Day2/CSSAdded.html">Day 2 - Article with a bit of CSS</a>
       <a href="./Day3/Resume.html">Day 3 - CV with flexbox</a>
       <a href="./Day4/Clock.html">Day 4 - CSS Clock</a>
-      <a href="./Day5/basic_calculator/index.html">Day 5 - Calculator</a>
+      <a href="./Day5/calculator.html">Day 5 - Calculator</a>
       <a href="./Day6/index.html">Day 6 - Js array questions</a>
       <a href="./Day7/index.html">Day 7 - Js object questions</a>
       <a href="./Day8/index.html">Day 8 - Checkbox Invader</a>
