--- a/Day3/Resume.html
+++ b/Day3/Resume.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
-    <title>CV</title>
+    <link rel="stylesheet" href="Resume.css" />
+    <title>Resume</title>
   </head>
   <body>
     <div class="heading">
-      <h2>Dhrumil Gajjar</h2>
+      <h2>Komal Pal</h2>
       <p>SDE</p>
     </div>
     <div class="container">
@@ -15,9 +15,7 @@
         <div class="profile">
           <h3>Personal Profile</h3>
           <p>
-            Hil I'm a high school senior with a knack for verbal communication
-            and public speaking. I'm looking for an internship in the digital
-            marketing industry.
+            I'm young enthusiast who is naturally curious about whatsoever surrounds her. If I have to describe the work ethic with a single phrase, that would be, ostinato rigore , the Italian phrase which loosely translates to relentless rigor. There's not only Technology which fascinated me but all other fields which could be integrated to it.
           </p>
         </div>
         <div class="honor">
