--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   <body>
     <h1>Devsnest Projects</h1>
     <div>
-      <a href="./Day1/Letter.html">Day 1 - Article with only HTML</a>
-      <a href="./Day2/CSSAdded.html">Day 2 - Article with a bit of CSS</a>
-      <a href="./Day3/Resume.html">Day 3 - CV with flexbox</a>
-      <a href="./Day4/Clock.html">Day 4 - CSS Clock</a>
-      <a href="./Day5/calculator.html">Day 5 - Calculator</a>
-      <a href="./Day6/beginnerJsQues.html">Day 6 - Js array questions</a>
-      <a href="./Day7/index.html">Day 7 - Js object questions</a>
-      <a href="./Day8/index.html">Day 8 - Checkbox Invader</a>
-      <a href="./Day9/index.html">Day 9 - Count the booking</a>
+      <a href="../basicTha/Day1/Letter.html">Day 1 - Article with only HTML</a>
+      <a href="../basicTha/Day2/CSSAdded.html">Day 2 - Article with a bit of CSS</a>
+      <a href="../basicTha/Day3/Resume.html">Day 3 - CV with flexbox</a>
+      <a href="../basicTha/Day4/Clock.html">Day 4 - CSS Clock</a>
+      <a href="../basicTha/Day5/calculator.html">Day 5 - Calculator</a>
+      <a href="../basicTha/Day6/beginnerJsQues.html">Day 6 - Js array questions</a>
+      <a href="../basicTha/Day7/index.html">Day 7 - Js object questions</a>
+      <a href="../basicTha/Day8/index.html">Day 8 - Checkbox Invader</a>
+      <a href="../basicTha/Day9/index.html">Day 9 - Count the booking</a>
     </div>
   </body>
 </html>
